syntax = "proto3";
package simplyvc.interchainqueries.icq;
import "icq/periodic_icq.proto";

option go_package = "github.com/simplyvc/interchainqueries/x/icq/types";

// PendingICQInstance is one instance of a request query. This is done to remove
// duplicate fields, we keep a pointer of the periodic query in this instance
// so we can trace back to all the requested fields.
message PendingICQInstance {
  uint64 id = 1;
  uint64 timeout_height = 2;
  uint64 target_height = 3; 
  uint64 periodic_id = 4;
}

// PendingICQsRequest is the full request we combine Periodic Query Data as well
// as the PendingICQs data, so that relayers can process the requests.
message PendingICQsRequest {
  uint64 id = 1;
  repeated IndividualICQ singleIcq = 2;
  uint64 timeout_height = 3;
  uint64 target_height = 4; 
  string client_id = 5; 
  uint64 periodic_id = 6;
}