syntax = "proto3";
package simplyvc.interchainqueries.icq;

option go_package = "github.com/simplyvc/interchainqueries/x/icq/types";

message PeriodicICQ {
    uint64 id = 1;
    string path = 2; 
    uint64 timeout_height_padding = 3;
    uint64 target_height = 4; 
    string client_id = 5; 
    string creator = 6;
    string chain_id = 7;
    bytes query_parameters = 8;
    uint64 block_repeat = 9;
    uint64 last_height_executed = 10;
    uint64 max_results = 11;
}